fix header on mobile!

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -142,7 +142,7 @@ code {
 
 .header {
   padding: 1.5rem;
-  height: 10vh;
+  /* height: 10vh; */
 }
 
 .menu {
